--- a/ui/src/app/cohort-review/table-page/table-page.html
+++ b/ui/src/app/cohort-review/table-page/table-page.html
@@ -1,4 +1,4 @@
-<!--<app-overview-charts></app-overview-charts>-->
+<app-overview-charts></app-overview-charts>
 <clr-datagrid
   (clrDgRefresh)="refresh($event)" [clrDgLoading]="loading">
   <clr-dg-placeholder>No Participants</clr-dg-placeholder>
