RW-1372 use normal font weight for names in drug tree

--- a/ui/src/app/cohort-search/node-info/node-info.component.html
+++ b/ui/src/app/cohort-search/node-info/node-info.component.html
@@ -13,8 +13,7 @@
   </button>
 
   <!-- CODE -->
-  <div class="code font-weight-bold"
-    [innerHTML]="displayCode | safeHtml">
+  <div class="code font-weight-bold">
     {{ displayCode }}
   </div>
 
