--- a/public-ui/src/app/views/quick-search/quick-search.component.html
+++ b/public-ui/src/app/views/quick-search/quick-search.component.html
@@ -63,7 +63,7 @@
             {{r.countValue | number}}
           </div>
           <p class="card-text bigger">
-             matching survey questions
+             matching survey questions <br>
             <span>{{r.domainDesc}}</span>
           </p>
 
