RW-1372 make text bold for messages in drugs tree

--- a/ui/src/app/cohort-search/search-bar/search-bar.component.css
+++ b/ui/src/app/cohort-search/search-bar/search-bar.component.css
@@ -52,3 +52,7 @@ input {
     font-weight: bolder;
     background-color: rgba(101,159,61,0.2);
 }
+.match-container {
+    font-weight: bold;
+    padding-top: 0.3rem;
+}
