--- a/public-ui/src/app/views/ehr-view/ehr-view.component.html
+++ b/public-ui/src/app/views/ehr-view/ehr-view.component.html
@@ -75,7 +75,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-3 grid-header flex-xs-middle"> Concept Name</div>
+          <div class="col-md-3 grid-header flex-xs-middle"> {{dbDomain.domainDisplay}}</div>
             <div class="col-md-4 grid-header flex-xs-middle"> Synonyms </div>
           <div class="col-md-2 grid-header flex-items-xs-right"> Participants of <b> {{totalParticipants | number}}</b> </div>
           <div class="col-md-2 grid-header flex-xs-middle info-text">
