--- a/public-ui/src/app/views/quick-search/quick-search.component.html
+++ b/public-ui/src/app/views/quick-search/quick-search.component.html
@@ -35,7 +35,7 @@
               {{r.name}}
             </h5>
             <div class="card-stat">
-              {{r.standardConceptCount | number}}
+              {{r.allConceptCount | number}}
             </div>
             <p class="card-text bigger">
               <span> matching medical concepts </span>
