Survey and domain info module ui fix

--- a/public-ui/src/app/views/quick-search/quick-search.component.html
+++ b/public-ui/src/app/views/quick-search/quick-search.component.html
@@ -64,7 +64,7 @@
           </div>
           <p class="card-text bigger">
              matching survey questions <br>
-            <span>{{r.domainDesc}}</span>
+            <span>{{r.description}}</span>
           </p>
 
           <div class="card-text bottom">
