--- a/public-ui/src/app/views/survey-view/survey-view.component.html
+++ b/public-ui/src/app/views/survey-view/survey-view.component.html
@@ -6,7 +6,7 @@
       <div class="page-header">
         <div *ngIf="survey && survey.conceptId">
           <h2> {{survey.name}} Survey Module </h2>
-          <h4 class="view-sub-title">{{survey.description}}. </h4>
+          <h4 class="view-sub-title">{{survey.description}} </h4>
         </div>
       </div>
     </div>
