--- a/public-ui/src/app/views/ehr-view/ehr-view.component.html
+++ b/public-ui/src/app/views/ehr-view/ehr-view.component.html
@@ -100,7 +100,7 @@
           </ng-template>
             <div class="col-md-4 flex-xs-middle" *ngIf="r.conceptSynonyms;else noConceptSynonyms" innerHtml="{{ r.conceptSynonyms.join(', ') | highlightSearch : prevSearchText}}"></div>
             <ng-template #noConceptSynonyms><div class="col-md-2 flex-xs-middle"></div></ng-template>
-          <div class="col-md-2 flex-items-xs-right" style="margin-top: .5rem;">
+          <div class="col-md-2 flex-items-xs-right">
             {{r.countValue | number }}
           </div>
           <div class="col-md-2 flex-xs-middle">
