--- a/ui/src/app/cohort-search/search-bar/search-bar.component.html
+++ b/ui/src/app/cohort-search/search-bar/search-bar.component.html
@@ -17,7 +17,7 @@
       <em>No results based on your search</em>
     </button>
   </div>
-  <div *ngIf="ingredientList.length" class="font-weight-bold">Ingredients in this brand: {{ingredientList.join(', ')}} </div>
+  <div *ngIf="ingredientList.length" class="match-container">Ingredients in this brand: {{ingredientList.join(', ')}} </div>
   <div *ngIf="numMatches > 1 && !ingredientList.length" class="match-container">
     {{searchTerm}} exists {{numMatches}} times in the tree below
   </div>
